--- a/conservation/index.html
+++ b/conservation/index.html
@@ -45,7 +45,7 @@
         <font class="fr"><a class="overscore" href="afrique/" title="Animat Habitat conservation. Afrique">Afrique</a></font> &middot;
 
         <font class="en"><a class="overscore" href="turtle-island/" title="Animat Habitat conservation. Turtle Island">North&nbsp;America</a></font>
-        <font class="fr"><a class="overscore" href="ile-de-la-tortue/" title="Animat Habitat conservation. Île de la Tortue.">Amèrique&nbsp;du&nbsp;Nord</a></font>
+        <font class="fr"><a class="overscore" href="ile-de-la-tortue/" title="Animat Habitat conservation. Île de la Tortue.">Amérique&nbsp;du&nbsp;Nord</a></font>
 
       </h3>
 
