--- a/index/index.html
+++ b/index/index.html
@@ -66,9 +66,9 @@
         <h5 class="letterhead title">Conservation</h5>
         <p>Animat Habitat <a href="../conservation/" title="Animat Habitat conservation.">Conservation</a></p>
         <p>Animat Habitat &ndash; <font class="en">Asia</font><font class="fr">Asie</font></p>
-        <p>Animat Habitat &ndash; <a href="../conservation/africa-afrique/" title="Animat Habitat conservation. Africa, Afrique."><font class="en">Africa</font><font class="fr">Afrique</font></a></p>
-        <p>Animat Habitat &ndash; <font class="en">North America</font><font class="fr">Amèrique du Nord</font></p>
-        <p>Animat Habitat &ndash; <font class="en">South America</font><font class="fr">Amèrique du Sud</font></p>
+        <p>Animat Habitat &ndash; <font class="en"><a href="../conservation/africa/" title="Animat Habitat conservation. Africa, Afrique.">Africa</a></font><font class="fr"><a href="../conservation/afrique/" title="Animat Habitat conservation. Africa, Afrique.">Afrique</a></font></p>
+        <p>Animat Habitat &ndash; <font class="en"><a href="../conservation/turtle-island/" title="Animat Habitat conservation. Turtle Island, Île de la Tortue.">North America</a></font><font class="fr"><a href="../conservation/ile-de-la-tortue/" title="Animat Habitat conservation. Turtle Island, Île de la Tortue.">Amérique du Nord</a></font></p>
+        <p>Animat Habitat &ndash; <font class="en">South America</font><font class="fr">Amérique du Sud</font></p>
         <p>Animat Habitat &ndash; <font class="en">Arctic</font><font class="fr">Arctique</font></p>
         <p>Animat Habitat &ndash; Europe</p>
         <p>Animat Habitat &ndash; <font class="en">Oceania</font><font class="fr">Océanie</font></p>
