--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -130,7 +130,7 @@
       </div>
 
       <div>
-        <p>See a more comprehensive list of wildlife conservation parks and projects in <a href="../../../conservation/africa-afrique/" title="Animat Habitat &ndash; Africa &ndash;&nbsp;Afrique.">Africa</a>.</p>
+        <p>See a more comprehensive list of wildlife conservation parks and projects in <a href="../../../conservation/africa/" title="Animat Habitat conservation. Africa, Afrique.">Africa</a>.</p>
 
       </div>
 
