--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -195,7 +195,7 @@
 
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="YYMLB9P3487MY">
-            <button type="submit" name="submit" alt="Magnificent Seven Digital Edition (Collection)"><font class="en">Purchase</font><font class="fr">Acheter<font class="break-cut"> cet article</font></font></button>
+            <button type="submit" name="submit" alt="Magnificent Seven Digital Edition (Collection)"><font class="en">Purchase</font><font class="fr">Acheter cet article</font></button>
 
           </form>
 
