--- a/conservation/africa/index.html
+++ b/conservation/africa/index.html
@@ -195,13 +195,13 @@
               <li>Liwonde National Park</li>
             </ul> -->
 
-            <p class="linebreak small">More habitats protected by <a href="../../url/-gov-mz/anac/" title="Adminstraç&atilde;o Nacional das &Aacute;reas de Conservaç&atilde;o, Mozambique" target="_blank">Adminstraç&atilde;o Nacional das &Aacute;reas de Conservaç&atilde;o</a>, Mozambique.</p>
+            <p class="linebreak small">More habitats protected by <a href="../../url/-gov-mz/anac/" title="Adminstraç&atilde;o Nacional das Áreas de Conservaç&atilde;o, Mozambique" target="_blank">Adminstraç&atilde;o Nacional das Áreas de Conservaç&atilde;o</a>, Mozambique.</p>
             <ul class="small">
               <li>Banhine National Park</li>
               <li>Bazaruto National Park</li>
               <li>Gorgongose National Park</li>
               <li>Limpopo National Park</li>
-              <li>M&aacute;goè National Park</li>
+              <li>Mágoè National Park</li>
               <li>Quirimbas National Park</li>
               <li>Zinave National Park</li>
               <li>Chimanimani National Reserve</li>
