--- a/conservation/afrique/index.html
+++ b/conservation/afrique/index.html
@@ -26,7 +26,7 @@
     <ul class="page">
       <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../" title="Animat Habitat conservation.">Conservation</a></li>
-      <li class="crumb active"><a><i>Africa</i></a></li>
+      <li class="crumb active"><a><i>Afrique</i></a></li>
       <li class="right thin"><a href="../africa/" title="Animat Habitat conservation. Africa">en</a></li>
     </ul>
   </nav>
@@ -73,7 +73,7 @@
           <div>
             <h5><font class="overscore">Conservation en Afrique du sud</font></h5>
             <ul>
-              <li><a href="../../url/-org/ehranamibia/" title="EHRA" target="_blank">Elephant-Human Relations Aid</a>, <i>Namibia</i></li>
+              <li><a href="../../url/-org/ehranamibia/" title="EHRA" target="_blank">Elephant-Human Relations Aid</a>, <i>Namibie</i></li>
               <li><a href="../../url/-org/elephantswithoutborders/" title="EWB" target="_blank">Elephants Without Borders</a>, <i>Botswana</i></li>
               <li><a href="../../url/-org/nationalgeographic-okavango/" title="NGOWP" target="_blank">Okavango Wilderness Project</a>, <i>Angola</i>, <i>Botswana</i></li>
               <li><a href="../../url/-org/zamsoc/" title="The Zambezi Society" target="_blank">The Zambezi Society</a>, <i>Zimbabwe</i></li>
@@ -105,13 +105,13 @@
             <h5><font class="overscore">Afrique de l'Est</font></h5>
             <ul>
               <li><a href="../../url/unesco/1060/" title="UNESCO #1060" target="_blank">Kenya Lake System in the Great Rift Valley</a>, <i>Kenya</i></li>
-              <li><a href="../../url/unesco/403/" title="UNESCO #403" target="_blank">Kilimanjaro National Park</a>, <i>Tanzania</i></li>
+              <li><a href="../../url/unesco/403/" title="UNESCO #403" target="_blank">Kilimanjaro National Park</a>, <i>Tanzanie</i></li>
               <li><a href="../../url/unesco/289/" title="UNESCO #289" target="_blank">Lake Malawi National Park</a>, <i>Malawi</i></li>
               <li><a href="../../url/unesco/801/" title="UNESCO #801" target="_blank">Lake Turkana National Parks</a>, <i>Kenya</i></li>
               <li><a href="../../url/unesco/800/" title="UNESCO #800" target="_blank">Mount Kenya National Park and Natural Forest</a>, <i>Kenya</i></li>
-              <li><a href="../../url/unesco/39/" title="UNESCO #39" target="_blank">Ngorongoro Conservation Area</a>, <i>Tanzania</i></li>
-              <li><a href="../../url/unesco/199/" title="UNESCO #199" target="_blank">Selous Game Reserve</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Game Reserve">1</a>]</sup>, <i>Tanzania</i></li>
-              <li><a href="../../url/unesco/156/" title="UNESCO #156" target="_blank">Serengeti National Park</a>, <i>Tanzania</i></li>
+              <li><a href="../../url/unesco/39/" title="UNESCO #39" target="_blank">Ngorongoro Conservation Area</a>, <i>Tanzanie</i></li>
+              <li><a href="../../url/unesco/199/" title="UNESCO #199" target="_blank">Selous Game Reserve</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Game Reserve">1</a>]</sup>, <i>Tanzanie</i></li>
+              <li><a href="../../url/unesco/156/" title="UNESCO #156" target="_blank">Serengeti National Park</a>, <i>Tanzanie</i></li>
               <li><a href="../../url/unesco/5515/" title="UNESCO #5515" target="_blank">Tsavo National Parks and Chyulu Hills Complex</a>, <i>Kenya</i></li>
             </ul>
 
@@ -139,6 +139,10 @@
               <li>Saiwa Swamp National Park</li>
               <li>Shimba Hills National Reserve</li>
               <li>Watamu Marine National Park</li>
+
+              <!-- Réserve nationale de  -->
+              <!-- Parc national d' -->
+
             </ul>
 
             <p class="linebreak small">Plus d'habitats protégées au Kenya.</p>
@@ -195,13 +199,13 @@
               <li>Liwonde National Park</li>
             </ul> -->
 
-            <p class="linebreak small">Plus d'habitats protégées par <a href="../../url/-gov-mz/anac/" title="Adminstraç&atilde;o Nacional das &Aacute;reas de Conservaç&atilde;o, Mozambique" target="_blank">Adminstraç&atilde;o Nacional das &Aacute;reas de Conservaç&atilde;o</a> au Mozambique.</font></p>
+            <p class="linebreak small">Plus d'habitats protégées par <a href="../../url/-gov-mz/anac/" title="Adminstraç&atilde;o Nacional das Áreas de Conservaç&atilde;o, Mozambique" target="_blank">Adminstraç&atilde;o Nacional das Áreas de Conservaç&atilde;o</a> au Mozambique.</font></p>
             <ul class="small">
               <li>Banhine National Park</li>
               <li>Bazaruto National Park</li>
               <li>Gorgongose National Park</li>
               <li>Limpopo National Park</li>
-              <li>M&aacute;goè National Park</li>
+              <li>Mágoè National Park</li>
               <li>Quirimbas National Park</li>
               <li>Zinave National Park</li>
               <li>Chimanimani National Reserve</li>
@@ -214,13 +218,13 @@
           <div>
             <h5><font class="overscore">Afrique du sud</font></h5>
             <ul>
-              <li><a href="../../url/unesco/914/" title="UNESCO #914" target="_blank">iSimangaliso Wetland Park</a>, <i>South Africa</i></li>
-              <li><a href="../../url/unesco/985/" title="UNESCO #985" target="_blank">Maloti-Drakensberg Park</a>, <i>Lesotho</i>, <i>South Africa</i></li>
+              <li><a href="../../url/unesco/914/" title="UNESCO #914" target="_blank">iSimangaliso Wetland Park</a>, <i>Afrique du Sud</i></li>
+              <li><a href="../../url/unesco/985/" title="UNESCO #985" target="_blank">Maloti-Drakensberg Park</a>, <i>Lesotho</i>, <i>Afrique du Sud</i></li>
               <li><a href="../../url/unesco/302/" title="UNESCO #302" target="_blank">Mana Pools National Park</a>, <i>Zimbabwe</i></li>
-              <li><a href="../../url/unesco/1099/" title="UNESCO #1099" target="_blank">Mapungubwe Cultural Landscape</a>, <i>South Africa</i></li>
-              <li><a href="../../url/unesco/509/" title="UNESCO #509" target="_blank">Mosi-oa-Tunya &ndash; Victoria Falls</a>, <i>Zambia</i>, <i>Zimbabwe</i></li>
-              <li><a href="../../url/unesco/1432/" title="UNESCO #1432" target="_blank">Okavango Delta</a>, <i>Angola</i>, <i>Botswana</i>, <i>Namibia</i></li>
-              <li>Torra Conservancy near <a href="../../url/unesco/1255/" title="UNESCO #1255" target="_blank">Twyfelfontein</a>, <i>Namibia</i></li>
+              <li><a href="../../url/unesco/1099/" title="UNESCO #1099" target="_blank">Mapungubwe Cultural Landscape</a>, <i>Afrique du Sud</i></li>
+              <li><a href="../../url/unesco/509/" title="UNESCO #509" target="_blank">Mosi-oa-Tunya &ndash; Victoria Falls</a>, <i>Zambie</i>, <i>Zimbabwe</i></li>
+              <li><a href="../../url/unesco/1432/" title="UNESCO #1432" target="_blank">Okavango Delta</a>, <i>Angola</i>, <i>Botswana</i>, <i>Namibie</i></li>
+              <li>Torra Conservancy near <a href="../../url/unesco/1255/" title="UNESCO #1255" target="_blank">Twyfelfontein</a>, <i>Namibie</i></li>
 
               <!-- <li><a href="../../url/unesco/306/" title="UNESCO #306" target="_blank">Matobo Hills</a>, <i>Zimbabwe</i></li> -->
 
