--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Animat Habitat is a non-profit organization creating art for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Animat Habitat est une organisation &agrave; but non-lucratif cr&eacute;ant de l'art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels." />
+  <meta name="description" content="Animat Habitat is a non-profit organization creating art for the conservation of endangered species and their natural habitats.&nbsp;&#92;&nbsp;Animat Habitat est une organisation à but non-lucratif créant de l'art pour la conservation des espèces en péril et de leurs habitats naturels." />
   <meta name="keywords" content="animat, animat habitat, wildlife art canada, wildlife art studio, wildlife conservation art" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -41,9 +41,9 @@
   <nav>
     <ul class="home">
       <li class="crumb logo"><a title="Animat Habitat"><img src="inc/svg/animat.mark.1.1.1200.dark.svg" class="logo" alt="Animat Mark (Dark) &copy; Animat Habitat, 2015" /></a></li>
-      <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one, sc&egrave;ne un.">I</a></li>
-      <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two, sc&egrave;ne deux.">II</a></li> -->
-      <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three, sc&egrave;ne trois.">III</a></li> -->
+      <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one, scène un.">I</a></li>
+      <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two, scène deux.">II</a></li> -->
+      <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three, scène trois.">III</a></li> -->
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
       <li class="right btn"><a href="patron/" title="Animat Habitat patrons.">Patron</a></li>
       <li class="right btn"><a href="boutique/" title="Animat Habitat boutique.">Boutique</a></li>
@@ -53,7 +53,7 @@
   <header>
     <div class="quote text-center">
       <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
-      <h3><font class="en">Art for the conservation of endangered species and their natural habitats.</font><font class="fr">Art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels.</font></h3>
+      <h3><font class="en">Art for the conservation of endangered species and their natural habitats.</font><font class="fr">Art pour la conservation des espèces en péril et de leurs habitats naturels.</font></h3>
 
     </div>
 
@@ -69,7 +69,7 @@
             <img src="inc/img/last-of-the-big-tuskers/lotbt.poster.art.480-233.jpg" width="480" height="233" alt="Last of the Big Tuskers (documentary film, 2018) poster art." />
             <div class="bg-one">
               <h3><font class="color-one">Last of the Big Tuskers (<font class="fr">&nbsp;</font>2018<font class="fr">&nbsp;</font>)</font></h3>
-              <p><font class="en">A film by James Currie&mdash;a documentary about the challenges to save the last of the big tuskers in Tembe Elephant Park, South Africa.</font><font class="fr">Un film de James Currie &mdash; un documentaire sur les d&eacute;fis pour conserver les derniers des &eacute;l&eacute;phants &agrave; grosse d&eacute;fense &agrave; Tembe, Afrique du Sud.</font></p>
+              <p><font class="en">A film by James Currie&mdash;a documentary about the challenges to save the last of the big tuskers in Tembe Elephant Park, South Africa.</font><font class="fr">Un film de James Currie &mdash; un documentaire sur les défis pour conserver les derniers des éléphants à grosse défense à Tembe, Afrique du Sud.</font></p>
             </div>
 
           </a>
@@ -77,11 +77,11 @@
         </div>
 
         <div>
-          <a class="project-thumbnail" href="scene/one/" title="Animat Habitat scene one, sc&egrave;ne un.">
+          <a class="project-thumbnail" href="scene/one/" title="Animat Habitat scene one, scène un.">
             <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one: White Elephant cover art, 2024." />
             <div class="bg-one">
               <h3><font class="color-one">I&nbsp; White Elephant (&ndash;)</font></h3>
-              <p><font class="en">Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.</font><font class="fr">Voyageons avec un &eacute;l&eacute;phant &agrave; travers une mer de sable &mdash; une bande dessin&eacute;e, une application compagnon et une invitation &agrave; changer la façon dont nous regardons la nature.</font></p>
+              <p><font class="en">Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.</font><font class="fr">Voyageons avec un éléphant à travers une mer de sable &mdash; une bande dessinée, une application compagnon et une invitation à changer la façon dont nous regardons la nature.</font></p>
             </div>
 
           </a>
@@ -97,7 +97,7 @@
       <div class="quote text-center">
         <h4>
           <font class="en">Animat<font class="thin">&mdash;<i>verb</i> in third person singular, indicative present, from the Latin</font> anim&amacr;re <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;animate</font><font class="text-quote">&rdquo;</font><font class="thin">,</font> <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;give&nbsp;life&nbsp;to</font><font class="text-quote">&rdquo;</font><font class="thin">.</font></font>
-          <font class="fr">Animat<font class="thin">&mdash;<i>verbe</i> en troisième personne du singulier, pr&egrave;sent de l'indicatif, du Latin</font> anim&amacr;re &laquo;&nbsp;<font class="thin">animer</font>&nbsp;&raquo;&nbsp;<font class="thin">,</font> &laquo;&nbsp;<font class="thin">donner la vie</font>&nbsp;&raquo;&nbsp;<font class="thin">.</font></font>
+          <font class="fr">Animat<font class="thin">&mdash;<i>verbe</i> en troisième personne du singulier, prèsent de l'indicatif, du Latin</font> anim&amacr;re &laquo;&nbsp;<font class="thin">animer</font>&nbsp;&raquo;&nbsp;<font class="thin">,</font> &laquo;&nbsp;<font class="thin">donner la vie</font>&nbsp;&raquo;&nbsp;<font class="thin">.</font></font>
         </h4>
 
         <!-- anim&otilde; -->
@@ -116,7 +116,7 @@
         <pre class="thin"></pre>
 
         <p class="linebreak"><a href="canon/" title="Animat Habitat canon.">Canon</a></p>
-        <p class="lineend small"><font class="en">Visual identity and mission statement.</font><font class="fr">Identit&eacute; visuelle et &eacute;nonc&eacute; de mission.</font></p>
+        <p class="lineend small"><font class="en">Visual identity and mission statement.</font><font class="fr">Identité visuelle et énoncé de mission.</font></p>
 
         <pre class="thin"></pre>
 
@@ -131,7 +131,7 @@
         <pre class="thin"></pre>
 
         <p class="linebreak"><a href="patron/" title="Animat Habitat patrons."><font class="en">Donation</font><font class="fr">Don</font></a></p>
-        <p class="lineend small"><font class="en">Patrons of the scenes in wildlife art.</font><font class="fr">Patrons des sc&egrave;nes d'art de la nature.</font></p>
+        <p class="lineend small"><font class="en">Patrons of the scenes in wildlife art.</font><font class="fr">Patrons des scènes d'art de la nature.</font></p>
 
         <pre class="thin"></pre>
 
@@ -146,7 +146,7 @@
         <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
 
           <div class="gutter-tobo">
-            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et pr&eacute;nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value == 'Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
+            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et prénom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value == 'Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
           </div>
 
           <div class="gutter-tobo clear-top">
@@ -159,15 +159,15 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak small"><font class="en">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <i>Oswald</i> [Extra-Light, Medium], and then archived with GitHub pages. Protected areas of this website not served on GitHub are hosted in Canada and powered by renewable energy.</font><font class="fr">Animat Habitat site officiel conçu et d&eacute;velopp&eacute; par <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts&nbsp;: <i>Oswald</i>, et puis archiv&eacute; avec les pages GitHub. Les zones prot&eacute;g&eacute;es de ce site Web non desservies sur GitHub sont h&eacute;berg&eacute;es au Canada et aliment&eacute;es par des &eacute;nergies renouvelables.</font></p>
+        <p class="linebreak small"><font class="en">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <i>Oswald</i> [Extra-Light, Medium], and then archived with GitHub pages. Protected areas of this website not served on GitHub are hosted in Canada and powered by renewable energy.</font><font class="fr">Animat Habitat site officiel conçu et développé par <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts&nbsp;: <i>Oswald</i>, et puis archivé avec les pages GitHub. Les zones protégées de ce site Web non desservies sur GitHub sont hébergées au Canada et alimentées par des énergies renouvelables.</font></p>
 
         <p class="linebreak small">Animat Habitat <a href="index/" title="Animat Habitat official website index, index du site officiel."><font class="en">Site Index</font><font class="fr">Index du site Web.</font></a></p>
 
-        <p class="linebreak small"><font class="en">Incorporated in Canada as not-for-profit organization #942675-2. &ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="s/" title="Animat Habitat member handbook, manuel des membres.">Member Handbook</a>.</font><font class="fr">Incorpor&eacute;e au Canada comme organisation &agrave; but non lucratif #&nbsp;942675-2. &laquo;&nbsp;Animat Habitat&nbsp;&raquo; est une marque non enregistr&eacute;e qui est prot&eacute;g&eacute;e aux fins de l'identit&eacute; corporatif. Les documents d'organisation sont archiv&eacute;s et class&eacute;s dans le <a href="s/" title="Animat Habitat member handbook, manuel des membres.">manuel des membres</a> chez Animat Habitat.</font></p>
+        <p class="linebreak small"><font class="en">Incorporated in Canada as not-for-profit organization #942675-2. &ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="s/" title="Animat Habitat member handbook, manuel des membres.">Member Handbook</a>.</font><font class="fr">Incorporée au Canada comme organisation à but non lucratif #&nbsp;942675-2. &laquo;&nbsp;Animat Habitat&nbsp;&raquo; est une marque non enregistrée qui est protégée aux fins de l'identité corporatif. Les documents d'organisation sont archivés et classés dans le <a href="s/" title="Animat Habitat member handbook, manuel des membres.">manuel des membres</a> chez Animat Habitat.</font></p>
 
         <p class="linebreak small"><font class="en">Thank you for visiting.</font><font class="fr">Merci pour votre visite.</font></p>
 
-        <p class="linebreak small">Copyright &copy; 2015-2025 Animat Habitat. <a href="c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'acc&egrave;s</font></a>.</p>
+        <p class="linebreak small">Copyright &copy; 2015-2025 Animat Habitat. <a href="c/" target="_blank" title="Animat Habitat terms of access."><font class="en">Terms of Access</font><font class="fr">Conditions d'accès</font></a>.</p>
 
       </div>
     </div>
