--- a/rss/index.html
+++ b/rss/index.html
@@ -30,8 +30,8 @@
   <nav>
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active"><a><i>Broadcast<font class="fr">&#92;&nbsp;Mises&nbsp;&agrave;&nbsp;jour</font></i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb active"><a><i><font class="en">Broadcast</font><font class="fr">Mises&nbsp;à&nbsp;jour</font></i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
@@ -41,32 +41,32 @@
       <div class="clear" id="register" spellcheck="false">
 
         <div>
-          <h3 class="letterhead">Behind the scenes in wildlife art&hellip;<font class="fr"><br>Dans les coulisses d'art de la nature&hellip;</font></h3>
+          <h3 class="letterhead"><font class="en">Behind the scenes in wildlife art&hellip;</font><font class="fr">Dans les coulisses d'art de la nature&hellip;</font></h3>
           <ul class="square">
-            <li>Letters from the editor of project broadcasts.<font class="fr">&nbsp;&#92;&nbsp;Lettres de l'&eacute;diteur des mises &agrave; jour du projet.</font></li>
-            <li>Previews of artworks and exhibitions of work.<font class="fr">&nbsp;&#92;&nbsp;Avant-premi&egrave;res d'&oelig;uvres d'art et d'expositions d'&oelig;uvres.</font></li>
+            <li><font class="en">Letters from the editor of project broadcasts.</font><font class="fr">Lettres de l'éditeur des mises à jour du projet.</font></li>
+            <li><font class="en">Previews of artworks and exhibitions of work.</font><font class="fr">Avant-premières d'&oelig;uvres d'art et d'expositions d'&oelig;uvres.</font></li>
 
           </ul>
 
-          <p class="linebreak">Register your name and address to get behind the scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom et votre adresse pour entrer dans les coulisses chez Animat Habitat.</font></p>
+          <p class="linebreak"><font class="en">Register your name and address to get behind the scenes at Animat Habitat.</font><font class="fr">Enregistrez votre nom et votre adresse pour entrer dans les coulisses chez Animat Habitat.</font></p>
 
         </div>
 
         <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
           <div class="clear-top">
-            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et pr&eacute;nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value == 'Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
+            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et prénom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value == 'Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
           </div>
 
           <div class="clear-top">
             <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email matte-thin" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value == 'E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
-            <button type="submit">Register<font class="fr">&nbsp;&#92;&nbsp;Enregistrez</font></button>
+            <button type="submit"><font class="en">Register</font><font class="fr">Enregistrez</font></button>
 
           </div>
 
         </form>
 
         <div class="clear-top">
-          <p class="small">A verification e-mail will be sent to the address provided.<font class="fr">&nbsp;&#92;&nbsp;Un e-mail de v&eacute;rification sera envoy&eacute; &agrave; l'adresse fournie.</font></p>
+          <p class="small"><font class="en">A verification e-mail will be sent to the address provided.</font><font class="fr">Un e-mail de vérification sera envoyé à l'adresse fournie.</font></p>
 
         </div>
       </div>
@@ -97,12 +97,12 @@
   function toggle_language() {
     if ( toggle_lang == 0 ) {
       r.style.setProperty('--fr', "inline");
-      r.style.setProperty('--fr-en', "none");
+      r.style.setProperty('--en', "none");
       toggle_lang = 1;
     }
     else {
       r.style.setProperty('--fr', "none");
-      r.style.setProperty('--fr-en', "inline");
+      r.style.setProperty('--en', "inline");
       toggle_lang = 0;
     }
   };
