--- a/boutique/medium/1/index.html
+++ b/boutique/medium/1/index.html
@@ -33,7 +33,7 @@
 
   <header>
 
-    <div class="quote text-center">
+    <div class="clear-bottom quote text-center">
       <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></a></h1>
       <h3><font class="en">Digital Editions</font><font class="fr">Éditions numériques</font></h3>
 
@@ -45,7 +45,7 @@
     <article>
 
       <div class="term-description">
-        <p><font class="en">Digital editions are delivered as a full resolution copy of the original artwork as well as a bundle of common screen sizes appropriate to the composition of the original artwork. Seventy (70) per cent of the purchase price is redirected to wildlife conservation projects in association with scenes at Animat Habitat.</font><font class="fr">Les éditions numériques sont livrées sous la forme d'une copie pleine résolution de l'&#156;uvre originale ainsi que d'un ensemble de tailles d'écran courantes des écrans adaptées à la composition de l'&#156;uvre originale. Soixante-dix pour cent du prix d'achat est redirigé aux projets de conservation de la nature en association avec les scènes chez Animat Habitat.</font></p>
+        <p class="lineend"><font class="en">Digital editions are delivered as a full resolution copy of the original artwork as well as a bundle of common screen sizes appropriate to the composition of the original artwork. Seventy (70) per cent of the purchase price is redirected to wildlife conservation projects in association with scenes at Animat Habitat.</font><font class="fr">Les éditions numériques sont livrées sous la forme d'une copie pleine résolution de l'&#156;uvre originale ainsi que d'un ensemble de tailles d'écran courantes des écrans adaptées à la composition de l'&#156;uvre originale. Soixante-dix pour cent du prix d'achat est redirigé aux projets de conservation de la nature en association avec les scènes chez Animat Habitat.</font></p>
       </div>
 
     </article><br class="clear">
@@ -59,12 +59,12 @@
 
           <a href="last-of-the-big-tuskers/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
 
             </div>
           </a>
 
-          <a href="last-of-the-big-tuskers/"><h5 class="product-title">Magnificent Seven</h5></a>
+          <a href="last-of-the-big-tuskers/"><h5 class="product-title"><font class="en">Magnificent Seven</font><font class="fr">Les Sept Mercenaires</font></h5></a>
           <h5 class="product-description">Collection <font class="en">of</font><font class="fr">de</font> 7</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
 
