--- a/boutique/medium/giclee/isilo/index.html
+++ b/boutique/medium/giclee/isilo/index.html
@@ -50,7 +50,7 @@
 
       <a onclick="toggle_preview();">
         <div class="text-center">
-          <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
+          <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
           <p class="linebreak"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
         </div>
@@ -62,7 +62,7 @@
     <section class="single">
       <div class="clear-bottom">
         <a onclick="toggle_preview();">
-          <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [thumbnail]" class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
+          <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo [thumbnail]" class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
 
         </a>
       </div>
