--- a/boutique/index.html
+++ b/boutique/index.html
@@ -42,14 +42,14 @@
     <div class="quote text-center">
       <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>
-        <a class="overscore" href="medium/digital-numerique/" title="Animat Habitat boutique. Digital editions, Éditions numériques.">
+        <a class="overscore" href="medium/1/" title="Animat Habitat boutique. Digital editions, Éditions numériques.">
           <font class="en">Digital Editions</font>
           <font class="fr">Editions numériques</font>
         </a> &middot; <a class="overscore" href="medium/giclee/" title="Animat Habitat boutique. Giclée.">
           <font class="en">Giclée Prints</font>
           <font class="fr">Giclées</font>
         </a>
-        <!-- &middot; <a class="overscore" href="medium/original/" title="Animat Habitat boutique. Traditional artworks, Oeuvres traditionels."><font class="en">Artworks</font></font><font class="fr">Oeuvres</font></a> -->
+        <!-- &middot; <a class="overscore" href="medium/oeuvre/" title="Animat Habitat boutique. Traditional artworks, Oeuvres traditionels."><font class="en">Artworks</font></font><font class="fr">Oeuvres</font></a> -->
       </h3>
     </div>
 
