--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -2,7 +2,7 @@
 <html lang="en, fr">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" />
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" /> -->
   <meta name="google" content="notranslate" />
 
   <meta name="author" content="Dane Aleksander" />
@@ -32,7 +32,7 @@
   </nav>
 
   <header>
-    <div class="quote text-center">
+    <div class="clear-bottom quote text-center">
       <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></a></h1>
       <h3><font class="en">Giclée Prints</font><font class="fr">Giclées</font></h3>
 
@@ -57,13 +57,13 @@
 
           <a href="isilo/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers (2018) &ndash; Isilo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
 
             </div>
           </a>
 
           <a href="isilo/"><h5 class="product-title">Isilo</h5></a>
-          <h5 class="product-description">Tembe Elephant Park, South Africa</h5>
+          <h5 class="product-description"><font class="en">Tembe Elephant Park, South Africa</font><font class="fr">Parc des éléphants de Tembe, Afrique du Sud</font></h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
 
         </li>
@@ -71,30 +71,30 @@
         <!-- <li class="post-1505 product-thumbnail">
           <a href="kamboyo/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers (2018) &ndash; Kamboyo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Kamboyo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" />
             </div></a>
           <a href="kamboyo/"><h5 class="product-title">Kamboyo</h5></a>
-          <h5 class="product-description">Tsavo Conservation Area, Kenya</h5>
+          <h5 class="product-description"><font class="en">Tsavo Conservation Area</font><font class="fr">Zone de conservation de Tsavo</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
         </li> -->
 
         <!-- <li class="post-1507 product-thumbnail">
           <a href="masthulele/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers (2018) &ndash; Masthulele [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Masthulele [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" />
             </div></a>
           <a href="masthulele/"><h5 class="product-title">Masthulele</h5></a>
-          <h5 class="product-description">Kruger National Park, South Africa</h5>
+          <h5 class="product-description"><font class="en">Kruger National Park, South Africa</font><font class="fr">Parc national Kruger, Afrique du Sud</font></h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
         </li> -->
 
         <!-- <li class="post-1508 product-thumbnail">
           <a href="one-ton/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers (2018) &ndash; One Ton [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; One Ton [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" />
             </div></a>
           <a href="one-ton/"><h5 class="product-title">One Ton</h5></a>
-          <h5 class="product-description">Chyulu Hills National Park, Kenya</h5>
+          <h5 class="product-description"><font class="en">Chyulu Hills National Park</font><font class="fr">Parc national de Chyulu Hills</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
         </li> -->
 
@@ -102,13 +102,13 @@
 
           <a href="satao/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers (2018) &ndash; Satao [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Satao [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
 
             </div>
           </a>
 
           <a href="satao/"><h5 class="product-title">Satao</h5></a>
-          <h5 class="product-description">Tsavo East National Park, Kenya</h5>
+          <h5 class="product-description"><font class="en">Tsavo East National Park</font><font class="fr">Parc national de Tsavo Est</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
 
         </li>
@@ -118,35 +118,20 @@
           <a href="tim-and-craig/">
             <div class="clear">
               <div class="gutter-small">
-                <img alt="Last of the Big Tuskers (2018) &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.180.jpg" />
+                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.180.jpg" />
               </div>
               <div class="gutter-small">
-                <img alt="Last of the Big Tuskers (2018) &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.180.jpg" />
+                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.180.jpg" />
               </div>
 
             </div>
           </a>
 
           <a href="tim-and-craig/"><h5 class="product-title">Tim &amp; Craig</h5></a>
-          <h5 class="product-description">Amboseli National Park, Kenya</h5>
+          <h5 class="product-description"><font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
 
         </li>
-
-        <!-- <li class="post-1497 product-thumbnail">
-
-          <a href="craig/">
-            <div class="clear">
-              <img alt="Last of the Big Tuskers (2018) &ndash; Craig [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" />
-
-            </div>
-          </a>
-
-          <a href="craig/"><h5 class="product-title">Craig</h5></a>
-          <h5 class="product-description">Amboseli National Park, Kenya</h5>
-          <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
-
-        </li> -->
 
         <br class="clear">
 
