--- a/boutique/index.html
+++ b/boutique/index.html
@@ -49,7 +49,7 @@
           <font class="en">Giclée Prints</font>
           <font class="fr">Giclées</font>
         </a>
-        <!-- &middot; <a class="overscore" href="medium/oeuvre/" title="Animat Habitat boutique. Traditional artworks, Oeuvres traditionels."><font class="en">Artworks</font></font><font class="fr">Oeuvres</font></a> -->
+        <!-- &middot; <a class="overscore" href="medium/oeuvre/" title="Animat Habitat boutique. Original artworks, Oeuvres originals."><font class="en">Artworks</font></font><font class="fr">Oeuvres</font></a> -->
       </h3>
     </div>
 
